cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)

add_executable(p89 p89_a^b%p.cpp) # Easy
add_executable(p90 p90_a*b%p.cpp) # Easy
add_executable(p92 p92_ExponentEnum.cpp) # Easy
add_executable(p93 p93_CombineEnum.cpp) # Easy
add_executable(p94 p94_ArrangeEnum.cpp) # Easy
add_executable(p95 p95_Switch.cpp) # Medium
add_executable(p96_simu p96_hanoita.cpp) # Easy
add_executable(p96 p96_OddHanoita.cpp) # Easy
add_executable(p99 p99_LaserBomb.cpp) # Medium