cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)
add_executable(test test.cpp)

add_executable(p41 p41_minStack.cpp) # Easy
add_executable(p89 p89_a^b%p.cpp) # Easy
add_executable(p90 p90_a*b%p.cpp) # Easy
add_executable(p92 p92_ExponentEnum.cpp) # Easy
add_executable(p93 p93_CombineEnum.cpp) # Easy
add_executable(p94 p94_ArrangeEnum.cpp) # Easy
add_executable(p95 p95_Switch.cpp) # Medium
add_executable(p96_simu p96_hanoita.cpp) # Easy
add_executable(p96 p96_OddHanoita.cpp) # Easy
add_executable(p99 p99_LaserBomb.cpp) # Medium
add_executable(p100 p100_IncDec.cpp) # Medium
add_executable(p101 p101_HighestCow.cpp) # Easy
add_executable(p102 p102_BestCowFences.cpp) # Medium
add_executable(p103 p103_movie.cpp) # Easy
add_executable(p113 p113_specialSort.cpp) # Easy
add_executable(p128 p128_editor.cpp) # Easy
add_executable(p129 p129_trainStack.cpp) # Easy
add_executable(p130 p130_trainStackSize.cpp) # Medium
add_executable(p131 p131_maxRectangle.cpp) # Easy
add_executable(p132 p132_teamQueue.cpp) # Easy
add_executable(p133 p133_earthworm.cpp) # Easy
add_executable(p135 p135_maxSubSum.cpp) # Easy
add_executable(p136 p136_neiborValueSearch.cpp) # Medium
add_executable(p137 p137_snowFlakes.cpp) # Easy
add_executable(p138 p138_rabbits.cpp) # Easy