cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)


add_executable(p101 p101_HighestCow.cpp) # Easy
add_executable(p102 p102_BestCowFences.cpp) # Medium
add_executable(p103 p103_movie.cpp) # Easy
add_executable(p110 p110_sunBlock.cpp) # Easy
add_executable(p113 p113_specialSort.cpp) # Easy
add_executable(p128 p128_editor.cpp) # Easy
add_executable(p129 p129_trainStack.cpp) # Easy
add_executable(p130 p130_trainStackSize.cpp) # Medium
add_executable(p131 p131_maxRectangle.cpp) # Easy
add_executable(p132 p132_teamQueue.cpp) # Easy
add_executable(p133 p133_earthworm.cpp) # Easy
add_executable(p135 p135_maxSubSum.cpp) # Easy
add_executable(p136 p136_neiborValueSearch.cpp) # Medium
add_executable(p137 p137_snowFlakes.cpp) # Easy
add_executable(p138 p138_rabbits.cpp) # Easy
add_executable(p139 p139_longestPalindrome.cpp) # Medium