cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)

add_executable(p34_searchRange p34_searchRange.cpp)
add_executable(p42_trapWater p42_trapWater.cpp)
add_executable(p46_Permutations.cpp p46_Permutations.cpp)
add_executable(p53_maxSubArray p53_maxSubArray.cpp)
add_executable(p63_uniquePaths p63_uniquePaths.cpp)
add_executable(p72_editDistance p72_editDistance.cpp)
add_executable(p74_searchMatrix p74_searchMatrix.cpp)
add_executable(p84_LargestRectagle p84_LargestRectagle.cpp)