cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)

add_executable(p111_minDepth p111_minDepth.cpp)
add_executable(p120_triangle p120_triangle.cpp)
add_executable(p137_singleNumber p137_singleNumber.cpp)
add_executable(p153_findMinInSortedArray p153_findMinInSortedArray.cpp)
add_executable(p162_findPeakElement p162_findPeakElement.cpp)