cmake_minimum_required(VERSION 3.14)
project(AcWing)

set(CMAKE_CXX_STANDARD 14)

add_executable(p239_maxSlidingWindow p239_maxSlidingWindow.cpp)
add_executable(p240_searchMatrix2 p240_searchMatrix2.cpp)
add_executable(p278_firstBadVersion p278_firstBadVersion.cpp)
add_executable(p300_lengthOfLIS p300_lengthOfLIS.cpp)